schema/testdata/errors/relationships_one_to_many_unmatched_many_side.keel
model Author {
    fields {
        post Post
    }
}

model Post {
    fields {
        author Author[]
        //expect-error:9:17:RelationshipError:Cannot form a one to many relationship with field 'post' on Author as it is already associated with field 'author'
        coAuthor Author[]
    }
}
